k8s/center-platform/ingress/apollo-config-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apollo-config-ingress-test
  namespace: default
  annotations:
    nginx.org/proxy-connect-timeout: "8s"
    nginx.org/proxy-read-timeout: "999s"
spec:
  rules:
  - host: apoconf-dev.jmtoptest.com
    http:
      paths:
      - backend:
          serviceName: apollo-config-svc
          servicePort: 8080
        path: /
